# ic-report

./: .gitignore  AGENT.md  LICENSE  PUBLISH.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: REFERENCE.md  USAGE.md
examples/: __init__.py  almox_report.py  centrocusto.py  classificacao.py  departamento.py  example01.py  example02.py  fornecedor.py  material.py  movimento.py
src/ic_reports/: constants.py  gridbox.py  report.py  utils.py
src/ic_reports/fonts/: calibri.pkl  calibrib.pkl  calibrii.pkl
src/tabularium/: __init__.py  errors.py
tests/: test_report.py  test_utils.py
