[project]
name = "ic-reports"
version = "0.1.0"
description = "Reusable PDF/Excel/CSV reporting helpers based on FPDF."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "IC Reports Maintainers" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "fpdf>=1.7.2",
  "pandas>=1.3.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://example.com/ic-reports"
Repository = "https://example.com/ic-reports"

[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ic_reports"]
include = [
  "src/ic_reports/fonts/*.ttf"
]

[tool.hatch.build.targets.sdist]
include = [
  "src/ic_reports/fonts/*.ttf",
  "examples/**",
  "docs/**",
  "README.md",
  "LICENSE"
]
