[project]
name = "tabularium"
version = "0.1.0"
description = "Reusable PDF/Excel/CSV reporting helpers based on FPDF."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Tabularium Maintainers" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "build>=1.4.0",
  "fpdf>=1.7.2",
  "openpyxl>=3.1.0",
  "pandas>=1.3.4",
  "pkginfo>=1.12.1.2",
  "twine>=6.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://blog.solucaoti.net.br/tabularium"
Repository = "https://blog.solucaoti.net.br/tabularium"

[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tabularium"]
include = [
  "src/tabularium/fonts/*.ttf"
]

[tool.hatch.build.targets.sdist]
include = [
  "src/tabularium/fonts/*.ttf",
  "examples/**",
  "docs/**",
  "README.md",
  "LICENSE"
]
